fix spacing issues on about.html for better performance

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,8 +364,8 @@ input:hover {
 .column {
     text-align: center;
     float: left;
-    width: 33.33vw;
-    padding: 2vw;
+    width: 33vw;
+    padding: 1vw;
 }
 
 .row:after {
@@ -378,16 +378,16 @@ input:hover {
     background-color: rgba(107, 107, 184, 0.662);
     font-family: 'Nanum Gothic', sans-serif;
     color: #b3d0d9;
-    font-size: 3vw;
+    font-size: 4vw;
     position: relative;
-    bottom: 9vw;
+    bottom: 50vw;
     width: 100vw;
     padding: 1%;
 }
 
 #video-box {
     position: relative;
-    bottom: 5vw;
+    bottom: 45vw;
     left: 12vw;
 }
 
@@ -398,23 +398,25 @@ input:hover {
 .covid-filming {
     width: 45vw;
     position: relative;
-    padding: 1%;
+    padding: 1vw;
     border-radius: 1vw;
     left: 5vw;
+    bottom: 44vw;
 }
 
 #behind-scenes {
     background-color: rgba(107, 107, 184, 0.662);
     font-family: 'Nanum Gothic', sans-serif;
     color: #b3d0d9;
-    font-size: 2vw;
-    margin: 1.5vw;
+    font-size: 4vw;
     position: relative;
+    width: 100vw;
+    padding: 1vw;
+    bottom: 40vw;
+}
 
-    border-radius: 1vw;
-    width: 63vw;
-    padding: 1%;
-    margin-bottom: 5vw;
+#behind-the-scenes{
+    height: 20vw;
 }
 
 /* conversions.html */
